2005-08-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * docs/gnuplot.doc (multiplot): Extend description of how
        multiplot actually works on interactive displays.  Place a hint
        about using 'clear' for insets.  Closes RFE #1256148.

2005-08-16  Harald Harders  <h.harders@tu-bs.de>

        * src/save.c (save_tics): Fix inconsistency in the syntax of the saved
        "set tics" command and the input "set tics" command. SF patch [1261165]

2005-08-12  Juergen Wieferink  <wieferink@freenet.de>

        * src/datafile.c (initialize_use_spec df_open df_close)
          src/fit.c (error_ex fit_command) src/set.c (set_palette_function):
        Use free_at() rather than free() for action table pointers.
        Fixes minor memory leaks found by valgrind.

        * src/eval.c (free_at): Handle null pointer gracefully.

        * src/gadgets.h src/graphics.h src/plot2d.c src/plot3d.c:
        Consistent initialization of the title_no_enhanced flag.

2005-08-12  Bastian Maerkisch  <bmaerkisch@web.de>

        SF patch [1234632] gnuplot history file without GNU readline

        * NEWS src/gp_hist.h src/history.c src/plot.c src/set.c src/show.c
        src/syscfg.h src/unset.c: This patch enables GNUPLOT_HISTORY if gnuplot
        is not compiled with GNU readline. History is automatically saved on
        program exit and reloaded on start. "set/unset history" commands are
        supported.

        * configure.in config/makefile.os2: Other makefiles should be adjusted
        to allow GNUPLOT_HISTORY to be defined when HAVE_LIBREADLINE is not.

2005-08-10  Ethan Merritt  <merritt@u.washington.edu>

        * src/gplt_x11.c: Restore original background pixel setting after
        text rotation.

2005-08-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * src/win/winmain.c: Define _WIN32_IE independent of particular
        compilers, conditional only on whether it's already defined.
        